kubernetes/apps/default/home-assistant/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/instance: home-assistant
      app.kubernetes.io/controller: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/controller: home-assistant
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/home-assistant/home-assistant:2026.3.4@sha256:916682086154a7390114a9788782b8efb199852d4f7d47066722c2bc5d1829e6
          ports:
            - name: http
              containerPort: 8123
            - name: coiot
              containerPort: 5683
              protocol: UDP
          startupProbe:
            tcpSocket:
              port: 8123
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tmpfs
              mountPath: /config/logs
              subPath: logs
            - name: tmpfs
              mountPath: /config/tts
              subPath: tts
            - name: tmpfs
              mountPath: /tmp
              subPath: tmp
        - name: code-server
          image: ghcr.io/coder/code-server:4.113.0@sha256:1cc68ebb18b6de53dadf95a69f186b80535b49821937697ef148fe4751ef92e1
          args:
            - --auth
            - none
            - --disable-telemetry
            - --disable-update-check
            - --user-data-dir
            - /config/.code-server
            - --extensions-dir
            - /config/.code-server
            - --port
            - "12321"
            - /config
          ports:
            - name: code-server
              containerPort: 12321
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant
        - name: tmpfs
          emptyDir: {}
