kubernetes/apps/default/home-assistant/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-app
  namespace: default
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/controller: home-assistant
    app.kubernetes.io/service: home-assistant-app
  annotations:
    lbipam.cilium.io/ips: "10.0.30.38"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
    - name: coiot
      port: 5683
      targetPort: 5683
      protocol: UDP
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/controller: home-assistant
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-code-server
  namespace: default
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/controller: home-assistant
    app.kubernetes.io/service: home-assistant-code-server
spec:
  type: ClusterIP
  ports:
    - name: code-server
      port: 12321
      targetPort: 12321
      protocol: TCP
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/controller: home-assistant
